refactor: move payload to security/payload and MessageResponse to dto, fix SessionMapper