@@ -7,17 +7,15 @@ import com.openclassrooms.starterjwt.services.TeacherService;
 import com.openclassrooms.starterjwt.services.UserService;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
-import org.mapstruct.Mappings;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
-@Mapper(componentModel = "spring", uses = {UserService.class}, imports = {Arrays.class, Collectors.class, Session.class, User.class, Collections.class, Optional.class})
+@Mapper(componentModel = "spring", imports = {Collections.class, Optional.class, List.class, User.class})
 public abstract class SessionMapper implements EntityMapper<SessionDto, Session> {
 
     @Autowired
@@ -25,18 +23,11 @@ public abstract class SessionMapper implements EntityMapper<SessionDto, Session>
     @Autowired
     UserService userService;
 
-    @Mappings({
-            @Mapping(source = "description", target = "description"),
-            @Mapping(target = "teacher", expression = "java(sessionDto.getTeacher_id() != null ? this.teacherService.findById(sessionDto.getTeacher_id()) : null)"),
-            @Mapping(target = "users", expression = "java(Optional.ofNullable(sessionDto.getUsers()).orElseGet(Collections::emptyList).stream().map(user_id -> { User user = this.userService.findById(user_id); if (user != null) { return user; } return null; }).collect(Collectors.toList()))"),
-    })
+    @Mapping(target = "teacher", expression = "java(sessionDto.getTeacherId() != null ? this.teacherService.findById(sessionDto.getTeacherId()) : null)")
+    @Mapping(target = "users", expression = "java(Optional.ofNullable(sessionDto.getUsers()).orElseGet(Collections::emptyList).stream().map(userId -> this.userService.findById(userId)).toList())")
     public abstract Session toEntity(SessionDto sessionDto);
 
-
-    @Mappings({
-            @Mapping(source = "description", target = "description"),
-            @Mapping(source = "session.teacher.id", target = "teacher_id"),
-            @Mapping(target = "users", expression = "java(Optional.ofNullable(session.getUsers()).orElseGet(Collections::emptyList).stream().map(u -> u.getId()).collect(Collectors.toList()))"),
-    })
+    @Mapping(source = "teacher.id", target = "teacherId")
+    @Mapping(target = "users", expression = "java(Optional.ofNullable(session.getUsers()).orElseGet(Collections::emptyList).stream().map(User::getId).toList())")
     public abstract SessionDto toDto(Session session);
 }
